# ClassicOS-2000-Theme

./: .gitignore  ClassicOS2000.geany  LICENSE  README.md  meson.build  meson_options.txt  quickmake.sh  schemes
screenshots/applications/: README.md
screenshots/colorschemes/: README.md
src/: index.theme.in  meson.build
src/gtk-2.0/: gtkrc.in  meson.build
src/gtk-3.0/: _colors-classic.scss  _colors-public.scss  _colors-standard.scss  _config.scss.in  _config_dark.scss.in  _drawing.scss  _shadow.scss  _shadow_dark.scss  _theme.scss  classicos2000-dark.scss  classicos2000.scss  classicos98-dark.scss  classicos98.scss  meson.build
src/gtk-3.0/apps/: _geany.scss  _libhandy.scss  _nemo.scss  _xfce.scss
src/gtk-3.0/colorschemes/: _brick.scss  _classic.scss  _desert.scss  _eggplant.scss  _high_contrast_1.scss  _high_contrast_2.scss  _high_contrast_black.scss  _high_contrast_white.scss  _lilac.scss  _maple.scss  _marine.scss  _plum.scss  _pumpkin.scss  _rainy_day.scss  _red_white_and_blue.scss  _rose.scss  _slate.scss  _slate_dark.scss  _spruce.scss  _spruce_dark.scss  _standard.scss  _standard_dark.scss  _storm.scss  _storm_dark.scss  _teal.scss  _wheat.scss  readingmaterial.scss
src/gtk-3.0/colorschemes/98/: _architecture.scss  _baseball.scss  _cartoon_society.scss  _cathy.scss  _cityscape.scss  _clouds_256.scss  _corbis.scss  _dangerous_creatures.scss  _dark_mode_blue.scss  _default.scss  _doonesbury.scss  _falling_leaves.scss  _fashion.scss  _foxtrot.scss  _geometry.scss  _gremlin_kitty.scss  _horror_channel.scss  _inside_your_computer.scss  _jazz.scss  _jungle.scss  _leo_da_vinci.scss  _more.scss  _mystery.scss  _nature.scss  _photodisc.scss  _rainbow_high.scss  _rock_n_roll.scss  _science.scss  _science_fiction.scss  _space.scss  _sports.scss  _the_60s_usa.scss  _the_golden_era.scss  _travel.scss  _underwater.scss  _world_traveler.scss
src/gtk-3.0/widgets/: _buttons.scss  _checkbox_radiobutton.scss  _containers.scss  _entry_combobox.scss  _expander.scss  _headerbar.scss  _list.scss  _menus.scss  _notebook.scss  _popover.scss  _progress_level_bar.scss  _scale.scss  _scrollbar.scss  _separator.scss  _spinbutton.scss  _switch.scss  _toolbar.scss  _view.scss  _widget.scss
src/gtk-4.0/: _config.scss.in  _config_dark.scss.in  _theme.scss  classicos2000-dark.scss  gtk.gresource.xml  meson.build
src/gtk-4.0/widgets/: _buttons.scss  _checkbox_radiobutton.scss  _entry_combobox.scss  _headerbar.scss  _menus.scss  _separator.scss  _spinbutton.scss  _toolbar.scss  _widget.scss
