#gtk_light_gresources = gnome.compile_resources('gtk', 'gtk.gresource.xml',
#                                         source_dir: join_paths(meson.source_root(), 'gtk-3.0'),
#                                         install: true,
#                                         gresource_bundle: true,
#                                         install_dir: join_paths(theme_path, 'gtk-3.0'))

